finished first draft of navbar, hero section, and contact section. Added all nav links and contact button. Added page bg, hero text, and profile image to hero section. Designed first draft of contact section. Next commit will include functional contact form and contact QOL improvements

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,14 @@
 body {
   background-color: #000;
   color: #fff;
+  font-family: arial;
+}
+a,
+a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+a:hover,
+a:hover:visited {
+  color: #999;
 }
