--- a/src/Components/HERO/Hero.css
+++ b/src/Components/HERO/Hero.css
@@ -1,1 +1,42 @@
-/* No CSS *//*# sourceMappingURL=Hero.css.map */
+.hero-wrapper {
+  height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-wrapper .hero-main {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-wrapper .hero-main h1 {
+  margin: 5vh;
+}
+
+.hero-wrapper .hero-main .hero-profile-photo {
+  height: 300px;
+  width: 300px;
+  background-image: url("../../Assets/hero-profile-photo.png");
+  background-size: cover;
+}
+/*# sourceMappingURL=Hero.css.map */
