--- a/src/Components/CONTACT/Contact.css
+++ b/src/Components/CONTACT/Contact.css
@@ -97,7 +97,7 @@
   outline: none;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-  cursor: none;
+  cursor: text;
 }
 
 .contact-wrapper .contact-container .form-wrapper .form-input-tier1 {
