--- a/src/Components/CONTACT/Contact.scss
+++ b/src/Components/CONTACT/Contact.scss
@@ -54,7 +54,7 @@
           background-color: rgb(255, 255, 255);
           outline: none;
           transition: 0.3s ease;
-          cursor: none;
+          cursor: text;
         }
       }
       .form-input-tier1 {
