--- a/src/Components/ABOUT/About.css
+++ b/src/Components/ABOUT/About.css
@@ -1,1 +1,59 @@
-/* No CSS *//*# sourceMappingURL=About.css.map */
+.about-wrapper {
+  height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-wrapper .about-main {
+  height: 75%;
+  width: 75%;
+  border: solid 2px white;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about-wrapper .about-main .about-left {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-wrapper .about-main .about-left .about-left-main-text {
+  height: 75%;
+  width: 80%;
+}
+
+.about-wrapper .about-main .about-left .about-left-main-text p {
+  font-size: 1.25em;
+  text-align: left;
+}
+
+.about-wrapper .about-main .about-right {
+  width: 50%;
+}
+/*# sourceMappingURL=About.css.map */
