finished draft of portfolio section

--- a/src/Components/PORTFOLIO/Portfolio.css
+++ b/src/Components/PORTFOLIO/Portfolio.css
@@ -47,6 +47,10 @@
 .portfolio-wrapper .project-wrapper .portfolio-project img {
   height: 100%;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -3;
 }
 
 .portfolio-wrapper .project-wrapper .portfolio-project .project-bttns {
