--- a/src/Components/PORTFOLIO/Portfolio.scss
+++ b/src/Components/PORTFOLIO/Portfolio.scss
@@ -25,6 +25,10 @@
       img {
         height: 100%;
         width: 100%;
+        position: absolute;
+        top: 0;
+        left:0;
+        z-index: -3;
       }
       .project-bttns {
         position: absolute;
