--- a/src/Components/NAVBAR/Navbar.scss
+++ b/src/Components/NAVBAR/Navbar.scss
@@ -8,6 +8,7 @@
     justify-content: space-evenly;
     font-size: 1em;
     position: fixed;
+    z-index: 10;
     button {
       height: 3em;
       width: 6.5em;
