--- a/src/Components/HERO/Hero.scss
+++ b/src/Components/HERO/Hero.scss
@@ -4,14 +4,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url("../../Assets/portfolio-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  .bg-overlay {
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    z-index: 1;
+  }
   .hero-main {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 2;
     h1 {
       margin: 5vh;
+    }
+    .jamalfox-header {
+      color: #16f2b4;
+      text-shadow: 3px 3px 20px #f433ab;
+      font-weight: bold;
+      font-size: 1.5em;
     }
     .hero-profile-photo {
       height: 300px;
