--- a/src/Components/ABOUT/About.css
+++ b/src/Components/ABOUT/About.css
@@ -55,5 +55,18 @@
 
 .about-wrapper .about-main .about-right {
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-wrapper .about-main .about-right .about-right-image {
+  width: 75%;
 }
 /*# sourceMappingURL=About.css.map */
