--- a/src/Components/HERO/Hero.css
+++ b/src/Components/HERO/Hero.css
@@ -47,8 +47,8 @@
 }
 
 .hero-wrapper .hero-main .jamalfox-header {
-  color: #16f2b4;
-  text-shadow: 3px 3px 20px #f433ab;
+  color: #fff;
+  text-shadow: 2px 2px 20px #16f2b4;
   font-weight: bold;
   font-size: 1.5em;
 }
