--- a/src/Components/ABOUT/About.css
+++ b/src/Components/ABOUT/About.css
@@ -19,11 +19,11 @@
 .about-wrapper .about-main {
   height: 75%;
   width: 75%;
-  border: solid 2px white;
   border-radius: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 5em;
 }
 
 .about-wrapper .about-main .about-left {
@@ -38,9 +38,9 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .about-wrapper .about-main .about-left .about-left-main-text {
@@ -68,5 +68,9 @@
 
 .about-wrapper .about-main .about-right .about-right-image {
   width: 75%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  -webkit-box-shadow: 2px 2px 20px #16f2b4;
+          box-shadow: 2px 2px 20px #16f2b4;
 }
 /*# sourceMappingURL=About.css.map */
