--- a/src/Components/ABOUT/About.scss
+++ b/src/Components/ABOUT/About.scss
@@ -8,15 +8,15 @@
   .about-main {
     height: 75%;
     width: 75%;
-    border: solid 2px white;
     border-radius: 25px;
     display: flex;
+    padding: 5em;
     .about-left {
       width: 50%;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      align-items: center;
+      align-items: flex-start;
       .about-left-main-text {
         height: 75%;
         width: 80%;
@@ -33,6 +33,9 @@
       align-items: center;
       .about-right-image {
         width: 75%;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        box-shadow: 2px 2px 20px #16f2b4;
       }
     }
   }
