--- a/src/Components/HERO/Hero.scss
+++ b/src/Components/HERO/Hero.scss
@@ -26,8 +26,8 @@
       margin: 5vh;
     }
     .jamalfox-header {
-      color: #16f2b4;
-      text-shadow: 3px 3px 20px #f433ab;
+      color: #fff;
+      text-shadow: 2px 2px 20px #16f2b4;
       font-weight: bold;
       font-size: 1.5em;
     }
