--- a/src/Components/CONTACT/Contact.css
+++ b/src/Components/CONTACT/Contact.css
@@ -13,6 +13,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-image: url("../../Assets/galaxy1.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .contact-wrapper .contact-header {
@@ -20,7 +25,7 @@
 }
 
 .contact-wrapper .contact-container {
-  height: 75%;
+  height: 60%;
   width: 75%;
   display: -webkit-box;
   display: -ms-flexbox;
