--- a/src/Components/HERO/Hero.css
+++ b/src/Components/HERO/Hero.css
@@ -10,9 +10,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("../../Assets/portfolio-bg.jpg");
-  background-size: cover;
+  background-image: url("../../Assets/galaxy2.jpg");
+  background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hero-wrapper .bg-overlay {
