--- a/src/Components/HERO/Hero.scss
+++ b/src/Components/HERO/Hero.scss
@@ -4,9 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../Assets/portfolio-bg.jpg");
-  background-size: cover;
+  background-image: url("../../Assets/galaxy2.jpg");
+  background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   .bg-overlay {
     height: 100vh;
     width: 100%;
