--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.css
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.css
@@ -1,66 +1,57 @@
-.project-details-wrapper {
+.mainprojectsdetails-wrapper {
   height: 100vh;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mainprojectsdetails-wrapper .project-details-container {
+  width: 90%;
+  height: 90%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[12];
       grid-template-columns: repeat(12, 1fr);
   -ms-grid-rows: (1fr)[4];
       grid-template-rows: repeat(4, 1fr);
+  gap: 20px;
 }
 
-.project-details-wrapper .project-details {
+.mainprojectsdetails-wrapper .project-details-container .project-details {
   background-color: white;
   border: solid 2px black;
   color: black;
+  border-radius: 25px;
+  -webkit-box-shadow: 2px 2px 70px #16f2b48e;
+          box-shadow: 2px 2px 70px #16f2b48e;
 }
 
-.project-details-wrapper .desc {
+.mainprojectsdetails-wrapper .project-details-container .desc {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.project-details-wrapper .title {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 6;
-  grid-column: 4/10;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.project-details-wrapper .git {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1/4;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-}
-
-.project-details-wrapper .vid {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 6;
-  grid-column: 4/10;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  grid-row: 2/5;
-}
-
-.project-details-wrapper .tech {
-  -ms-grid-column: 10;
-  -ms-grid-column-span: 3;
-  grid-column: 10/13;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
 
-.project-details-wrapper .testing {
+.mainprojectsdetails-wrapper .project-details-container .title {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 6;
+  grid-column: 4/10;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .git {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
@@ -69,7 +60,34 @@
   grid-row: 3/4;
 }
 
-.project-details-wrapper .w3 {
+.mainprojectsdetails-wrapper .project-details-container .vid {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 6;
+  grid-column: 4/10;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2/5;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .tech {
+  -ms-grid-column: 10;
+  -ms-grid-column-span: 3;
+  grid-column: 10/13;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .testing {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .w3 {
   -ms-grid-column: 10;
   -ms-grid-column-span: 3;
   grid-column: 10/13;
