--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
@@ -1,40 +1,52 @@
-.project-details-wrapper {
-    height: 100vh;
-    width: 100%;
+.mainprojectsdetails-wrapper {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .project-details-container {
+    width: 90%;
+    height: 90%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+
     .project-details {
-        background-color: white;
-        border: solid 2px black;
-        color: black;
+      background-color: white;
+      border: solid 2px black;
+      color: black;
+      border-radius: 25px;
+      box-shadow: 2px 2px 70px #16f2b48e;
     }
     .desc {
-        grid-column: 1/4;
-        grid-row: 1/2;
+      grid-column: 1/4;
+      grid-row: 1/3;
     }
     .title {
-        grid-column:4/10;
-        grid-row:1/2;
+      grid-column: 4/10;
+      grid-row: 1/2;
     }
     .git {
-        grid-column:1/4;
-        grid-row:2/3;
+      grid-column: 1/4;
+      grid-row: 3/4;
     }
     .vid {
-        grid-column: 4/10;
-        grid-row: 2/5;
+      grid-column: 4/10;
+      grid-row: 2/5;
     }
     .tech {
-        grid-column: 10/13;
-        grid-row: 1/3;
+      grid-column: 10/13;
+      grid-row: 1/3;
     }
     .testing {
-        grid-column: 1/4;
-        grid-row:3/4;
+      grid-column: 1/4;
+      grid-row: 4/5;
     }
     .w3 {
-        grid-column: 10/13;
-        grid-row: 3/5;
+      grid-column: 10/13;
+      grid-row: 3/5;
     }
+  }
 }
