--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.css
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.css
@@ -26,20 +26,36 @@
 
 .mainprojectsdetails-wrapper .project-details-container .project-details {
   background-color: white;
-  border: solid 2px black;
   color: black;
   border-radius: 25px;
-  -webkit-box-shadow: 2px 2px 70px #16f2b48e;
-          box-shadow: 2px 2px 70px #16f2b48e;
+  -webkit-box-shadow: 2px 2px 20px #16f2b48e;
+          box-shadow: 2px 2px 20px #16f2b48e;
 }
 
 .mainprojectsdetails-wrapper .project-details-container .desc {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2/5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1em;
+  font-size: 1.25em;
+  background-color: transparent;
+  color: white;
+  font-weight: bold;
+  padding: 2em;
+  height: 100%;
+  line-height: 1.5em;
 }
 
 .mainprojectsdetails-wrapper .project-details-container .title {
@@ -49,15 +65,42 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-shadow: 2px 2px 20px #16f2b4;
+  font-size: 2em;
 }
 
 .mainprojectsdetails-wrapper .project-details-container .git {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
-  -ms-grid-row: 3;
+  -ms-grid-row: 1;
   -ms-grid-row-span: 1;
-  grid-row: 3/4;
+  grid-row: 1/2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #16f2b4;
+  color: black;
+  font-size: 6em;
 }
 
 .mainprojectsdetails-wrapper .project-details-container .vid {
@@ -67,30 +110,144 @@
   -ms-grid-row: 2;
   -ms-grid-row-span: 3;
   grid-row: 2/5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .vid .project-details-image {
+  height: 100%;
 }
 
 .mainprojectsdetails-wrapper .project-details-container .tech {
   -ms-grid-column: 10;
   -ms-grid-column-span: 3;
   grid-column: 10/13;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2/5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  color: white;
+  background-color: transparent;
+  text-shadow: 2px 2px 20px #16f2b4;
+  letter-spacing: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
-.mainprojectsdetails-wrapper .project-details-container .testing {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1/4;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
+.mainprojectsdetails-wrapper .project-details-container .tech h1 {
+  margin: 1em;
 }
 
-.mainprojectsdetails-wrapper .project-details-container .w3 {
+.mainprojectsdetails-wrapper .project-details-container .tech .project-tech-list {
+  height: 70%;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-left: 25%;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .tech .project-tech-list li {
+  font-size: 1.25em;
+  text-shadow: 2px 2px 20px #16f2b4;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons {
   -ms-grid-column: 10;
   -ms-grid-column-span: 3;
   grid-column: 10/13;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a {
+  width: 45%;
+  height: 50px;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a .project-detail-button {
+  border: solid 2px white;
+  border-radius: 25px;
+  height: 50px;
+  margin: 1px;
+  -webkit-box-shadow: 2px 2px 20px #16f2b4;
+          box-shadow: 2px 2px 20px #16f2b4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  font-size: 1.25em;
+  color: #16f2b4;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a .pdb-view:hover,
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a .pdb-contact:hover {
+  background-color: #16f2b4;
+  color: black;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a .pdb-back {
+  color: #f433aa;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .project-detail-buttons a .pdb-back:hover {
+  background-color: #f433aa;
+  color: black;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.mainprojectsdetails-wrapper .project-details-container .w3 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
   -ms-grid-row: 3;
   -ms-grid-row-span: 2;
   grid-row: 3/5;
