--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
@@ -15,37 +15,130 @@
 
     .project-details {
       background-color: white;
-      border: solid 2px black;
       color: black;
       border-radius: 25px;
-      box-shadow: 2px 2px 70px #16f2b48e;
+      box-shadow: 2px 2px 20px #16f2b48e;
     }
     .desc {
       grid-column: 1/4;
-      grid-row: 1/3;
+      grid-row: 2/5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1em;
+      font-size: 1.25em;
+      background-color: transparent;
+      color: white;
+      font-weight: bold;
+      padding: 2em;
+      height: 100%;
+      line-height: 1.5em;
     }
     .title {
       grid-column: 4/10;
       grid-row: 1/2;
+      background-color: transparent;
+      box-shadow: none;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-shadow: 2px 2px 20px #16f2b4;
+      font-size: 2em;
     }
     .git {
       grid-column: 1/4;
-      grid-row: 3/4;
+      grid-row: 1/2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #16f2b4;
+      color: black;
+      font-size: 6em;
     }
     .vid {
       grid-column: 4/10;
       grid-row: 2/5;
+      display: flex;
+      justify-content: center;
+      overflow: hidden;
+      .project-details-image {
+        height: 100%;
+      }
     }
     .tech {
       grid-column: 10/13;
-      grid-row: 1/3;
+      grid-row: 2/5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-weight: bold;
+      color: white;
+      background-color: transparent;
+      text-shadow: 2px 2px 20px #16f2b4;
+      letter-spacing: 2px;
+      box-shadow: none;
+      h1 {
+        margin: 1em;
+      }
+      .project-tech-list {
+        height: 70%;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-self: flex-start;
+        margin-left: 25%;
+        li {
+          font-size: 1.25em;
+          text-shadow: 2px 2px 20px #16f2b4;
+        }
+      }
     }
-    .testing {
-      grid-column: 1/4;
-      grid-row: 4/5;
+    .project-detail-buttons {
+      grid-column: 10/13;
+      grid-row: 1/2;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+      background-color: transparent;
+      box-shadow: none;
+      a {
+        width: 45%;
+          height: 50px;
+        
+        .project-detail-button {
+          border: solid 2px white;
+          border-radius: 25px;
+          height: 50px;
+          margin: 1px;
+          box-shadow: 2px 2px 20px #16f2b4;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: bold;
+          font-size: 1.25em;
+          color: #16f2b4;
+        }
+        .pdb-view:hover,
+        .pdb-contact:hover {
+          background-color: #16f2b4;
+          color: black;
+          transition: 0.3s ease-in-out;
+        }
+        .pdb-back {
+          color: #f433aa;
+        }
+        .pdb-back:hover {
+          background-color: #f433aa;
+          color: black;
+          transition: 0.3s ease-in-out;
+        }
+      }
     }
     .w3 {
-      grid-column: 10/13;
+      grid-column: 1/4;
       grid-row: 3/5;
     }
   }
