--- a/src/Components/HERO/Hero.scss
+++ b/src/Components/HERO/Hero.scss
@@ -38,6 +38,7 @@
       width: 300px;
       background-image: url("../../Assets/hero-profile-photo.png");
       background-size: cover;
+      border-radius: 50%;
     }
   }
 }
