--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
@@ -104,7 +104,7 @@
       align-items: center;
       background-color: transparent;
       box-shadow: none;
-      a {
+      a, Link {
         width: 45%;
           height: 50px;
         
