--- a/src/Components/ABOUT/About.css
+++ b/src/Components/ABOUT/About.css
@@ -14,6 +14,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .about-wrapper .about-main {
@@ -74,7 +75,7 @@
           box-shadow: 2px 2px 20px #16f2b4;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .about-wrapper {
     height: auto;
   }
@@ -105,6 +106,9 @@
   }
   .about-wrapper .about-main .about-right {
     width: 100%;
+  }
+  .about-wrapper .about-main .about-right .about-right-image {
+    width: 50%;
   }
 }
 /*# sourceMappingURL=About.css.map */
