--- a/src/Components/ABOUT/About.scss
+++ b/src/Components/ABOUT/About.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  position: relative;
   .about-main {
     height: 75%;
     width: 75%;
@@ -41,7 +42,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .about-wrapper {
     height: auto;
     .about-header {
@@ -65,6 +66,9 @@
       }
       .about-right {
         width: 100%;
+        .about-right-image {
+          width: 50%;
+        }
       }
     }
   }
