--- a/src/Components/PORTFOLIO/Portfolio.scss
+++ b/src/Components/PORTFOLIO/Portfolio.scss
@@ -27,7 +27,7 @@
         width: 100%;
         position: absolute;
         top: 0;
-        left:0;
+        left: 0;
         z-index: -3;
       }
       .project-bttns {
@@ -36,8 +36,38 @@
         right: 1em;
         display: flex;
         flex-direction: column;
+
         .project-bttn {
           margin: 0.5em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .portfolio-wrapper {
+    height: auto;
+    margin: 5em 0;
+    .project-wrapper {
+      height: auto;
+      padding: 0.5em;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      .portfolio-project {
+        height: 200px;
+        width: 300px;
+        margin: 1.25em 0;
+        .project-bttns {
+          bottom: 0.2em;
+          right: 0.2em;
+          transform: scale(0.8);
+          .project-bttn {
+            margin: 0.2em;
+          }
         }
       }
     }
